--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="head">
+        <button class="btn-bascet">Корзина</button>
+        <div class="bascet-block invisible">Список товаров в корзине</div>
+    </header>
     <div class="container">
 
     </div>
